# bagof-things

./: README.md  pyproject.toml  requirements-lint.txt  zensical.toml
.github/workflows/: coverage-on-push.yaml  coverage.yaml  lint.yaml  publish-on-release.yaml  publish-pypi.yaml  test-and-publish.yaml  test-matrix.yaml  test.yaml
tests/: test_import.py
