[project]
name = "bagof-name"
# Replace these template contacts before publishing.
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Template package for bagof.name"
readme = "README.md"
license = "MIT"
keywords = ["bagof", "template", "python"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.13",
]

[project.urls]
Homepage = "https://github.com/bagofseeds/bagof-name"
Documentation = "https://github.com/bagofseeds/bagof-name#readme"
Issues = "https://github.com/bagofseeds/bagof-name/issues"
Repository = "https://github.com/bagofseeds/bagof-name"

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[build-system]
requires = [
    "setuptools>=78.1.1",
    "wheel>=0.46.2",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bagof*"]
namespaces = true

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/bagof/name/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "UP006",
]

[tool.codespell]
check-filenames = true
skip = ".git,*.egg-info,build,dist,*.pdf,*.svg"
